Subheaders. Using lists instead of tuples.

--- a/python/02_logistic_growth.ipynb
+++ b/python/02_logistic_growth.ipynb
@@ -21,6 +21,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -35,8 +42,14 @@
     "\n",
     "# Model.\n",
     "# TODO: Implement the ODE for logistic growth. Use r and K as parameters.\n",
-    "# F = lamdda y, t: ...............\n",
-    "F = lambda y, t: r * y * (1 - y / K)\n"
+    "F = lambda y, t: ..............."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solution"
    ]
   },
   {
@@ -68,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Animation "
+    "## Animation "
    ]
   },
   {
@@ -116,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multiple initial conditions "
+    "## Multiple initial conditions "
    ]
   },
   {
@@ -182,6 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a video.\n",
     "HTML(anim_.to_html5_video())"
    ]
   },
