--- a/python/03_lotka_volterra.ipynb
+++ b/python/03_lotka_volterra.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lotka-Volterra "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -11,6 +18,13 @@
     "from matplotlib import pyplot as plt  # For plotting.\n",
     "import numpy as np                    # For solving ODE.\n",
     "from scipy.integrate import odeint    # For solving ODE."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model "
    ]
   },
   {
@@ -34,6 +48,13 @@
     "    y[0] * (a - b * y[1]),   # How population 0 changes.\n",
     "    y[1] * (-c + d * y[0]),  # How population 1 changes.\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solution "
    ]
   },
   {
@@ -63,6 +84,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Animation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -77,20 +105,20 @@
     "ax.set_xlim((t0, t1))  # Range of x-axis.\n",
     "ax.set_ylim((0, 100))  # Range of y-axis.\n",
     "\n",
-    "line0, = ax.plot([], [], lw=2)\n",
-    "line1, = ax.plot([], [], lw=2)\n",
+    "line0 = ax.plot([], [], lw=2)[0]\n",
+    "line1 = ax.plot([], [], lw=2)[0]\n",
     "\n",
     "def init():\n",
     "    line0.set_data([], [])\n",
     "    line1.set_data([], [])\n",
-    "    return (line0, line1)\n",
+    "    return [line0, line1]\n",
     "\n",
     "def animate(i):\n",
     "    # Take only first (i/FRAMES) of the total number of points.\n",
     "    k = len(t) * i // FRAMES\n",
     "    line0.set_data(t[:k], y[:k, 0])\n",
     "    line1.set_data(t[:k], y[:k, 1])\n",
-    "    return (line0, line1)\n",
+    "    return [line0, line1]\n",
     "\n",
     "anim = animation.FuncAnimation(fig, animate, init_func=init,\n",
     "                               frames=FRAMES, interval=50, blit=True)"
