--- a/python/04_lv_phase_diagram.ipynb
+++ b/python/04_lv_phase_diagram.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Phase diagram of Lotka-Volterra equation "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -97,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Phase diagram animation"
+    "## Phase diagram animation"
    ]
   },
   {
@@ -140,14 +147,14 @@
     "    line_pp.set_data([], [])\n",
     "    line_tp0.set_data([], [])\n",
     "    line_tp1.set_data([], [])\n",
-    "    return (line_pp, line_tp0, line_tp1)\n",
+    "    return [line_pp, line_tp0, line_tp1]\n",
     "\n",
     "def animate(i):\n",
     "    k = int(len(t) * CUT_T * i / FRAMES)\n",
     "    line_pp.set_data(y[0][:k, 0], y[0][:k, 1])\n",
     "    line_tp0.set_data(t[:k], y[0][:k, 0])\n",
     "    line_tp1.set_data(t[:k], y[0][:k, 1])\n",
-    "    return (line_pp, line_tp0, line_tp1)\n",
+    "    return [line_pp, line_tp0, line_tp1]\n",
     "\n",
     "anim = animation.FuncAnimation(fig, animate, init_func=init,\n",
     "                               frames=FRAMES, interval=100, blit=True)"
@@ -167,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Phase diagram and multiple initial conditions"
+    "## Phase diagram and multiple initial conditions"
    ]
   },
   {
