--- a/python/05_test_inference.ipynb
+++ b/python/05_test_inference.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inference (on synthetic data) "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -12,6 +19,13 @@
     "import numpy as np                    # For solving ODE.\n",
     "from scipy.integrate import odeint    # For solving ODE.\n",
     "import cma                            # For optimization."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generating synthetic data "
    ]
   },
   {
@@ -64,6 +78,13 @@
     "plt.grid(linestyle=':')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Optimization (finding optimal paremeters) "
    ]
   },
   {
