--- a/python/06_inference.ipynb
+++ b/python/06_inference.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inference (on real data)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -12,6 +19,13 @@
     "import numpy as np                    # For solving ODE.\n",
     "from scipy.integrate import odeint    # For solving ODE.\n",
     "import cma                            # For optimization."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reading data "
    ]
   },
   {
@@ -51,6 +65,13 @@
     "plt.grid(linestyle=':')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Optimization (finding optimal parameters) "
    ]
   },
   {
@@ -112,6 +133,13 @@
    "source": [
     "# Best parameter set is:\n",
     "cma_result.best.get()[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualization of the optimal solution"
    ]
   },
   {
