--- a/python/08_two_species_mutualism.ipynb
+++ b/python/08_two_species_mutualism.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mutualism (with two species) "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -11,6 +18,13 @@
     "from matplotlib import pyplot as plt  # For plotting.\n",
     "import numpy as np                    # For solving ODE.\n",
     "from scipy.integrate import odeint    # For solving ODE."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model "
    ]
   },
   {
@@ -39,6 +53,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solution "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -62,6 +83,13 @@
     "plt.grid(linestyle=':')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Animation "
    ]
   },
   {
