--- a/python/sol_02_logistic_growth.ipynb
+++ b/python/sol_02_logistic_growth.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Population growth "
+    "# Logistic growth"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model"
+    "## Model "
    ]
   },
   {
@@ -35,17 +35,15 @@
    "source": [
     "# Parameters.\n",
     "r = 0.4    # Growth coefficient.\n",
+    "K = 100    # Maximum population, capacity.\n",
     "t0 = 0.0   # Initial time.\n",
-    "t1 = 10.0  # Final time.\n",
-    "y0 = 2     # Initial population.\n",
+    "t1 = 20.0  # Final time.\n",
+    "y0 = 10    # Initial population.\n",
     "\n",
     "# Model.\n",
-    "#\n",
-    "#     F is a function of two arguments.\n",
-    "#   ------------\n",
-    "F = lambda y, t: r * y\n",
-    "#                -----\n",
-    "#                Expression that F represents.\n"
+    "# TODO: Implement the ODE for logistic growth. Use r and K as parameters.\n",
+    "# F = lamdda y, t: ...............\n",
+    "F = lambda y, t: r * y * (1 - y / K)\n"
    ]
   },
   {
@@ -61,8 +59,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solve ODE for t = 0.00, 0.01, ..., 10.00.\n",
-    "t = np.linspace(t0, t1, 1000)\n",
+    "# Solve ODE.\n",
+    "t = np.linspace(t0, t1, 200)\n",
     "y = odeint(F, y0, t)"
    ]
   },
@@ -72,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot population vs. time.\n",
+    "# Plot populations vs. time.\n",
     "plt.plot(t, y)\n",
     "plt.xlabel('time')\n",
     "plt.ylabel('population')\n",
@@ -94,37 +92,28 @@
    "outputs": [],
    "source": [
     "# Same plot, but as an animation.\n",
-    "# Taken from:\n",
     "# http://louistiao.me/posts/notebooks/embedding-matplotlib-animations-in-jupyter-notebooks/\n",
     "FRAMES = 100\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "ax.grid(linestyle=':')\n",
     "ax.set_xlim((t0, t1))    # Range of x-axis.\n",
-    "ax.set_ylim((0, y[-1]))  # Range of y-axis.\n",
+    "ax.set_ylim((0, 200))  # Range of y-axis.\n",
     "\n",
     "line = ax.plot([], [], lw=2)[0]\n",
     "\n",
     "def init():\n",
-    "    # Initially, line is empty (nothing is drawn).\n",
     "    line.set_data([], [])\n",
-    "    \n",
-    "    # Return a list of all lines. Here only one.\n",
     "    return [line]\n",
     "\n",
     "def animate(i):\n",
-    "    \"\"\"Data shown on the frame #i.\"\"\"\n",
-    "    # Take only first (i/FRAMES) of total number of points.\n",
+    "    # Take only first (i/FRAMES) points.\n",
     "    k = len(t) * i // FRAMES\n",
     "    line.set_data(t[:k], y[:k])\n",
-    "    \n",
-    "    # Return a list of all lines. Here only one.\n",
     "    return [line]\n",
     "\n",
     "anim = animation.FuncAnimation(fig, animate, init_func=init,\n",
-    "                               frames=FRAMES, interval=50, blit=True)\n",
-    "\n",
-    "# A blank plot will be shown, ignore it."
+    "                               frames=FRAMES, interval=50, blit=True)"
    ]
   },
   {
@@ -141,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Negative coefficient (population decrease) "
+    "## Multiple initial conditions "
    ]
   },
   {
@@ -150,11 +139,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Using _ suffix to differentiate between old and new variables.\n",
-    "r_ = -0.4\n",
-    "y0_ = y[-1]               # Initial population value is equal to the final value earlier.\n",
-    "F_ = lambda y, t: r_ * y  # New F_ uses r_ instead of r.\n",
-    "y_ = odeint(F_, y0_, t)"
+    "# Calculate results for multiple initial conditions.\n",
+    "# We simply pass a list of initial conditions to `odeint`,\n",
+    "# so that it integrates all variants simultaneously.\n",
+    "y0_ = [1, 5, 10, 15, 30, 50, 70, 90, 100, 110, 130, 150, 170, 190]\n",
+    "y_ = odeint(F, y0_, t)"
    ]
   },
   {
@@ -163,27 +152,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Show one line for each initial condition.\n",
+    "# Each line is gradually included onto the plot.\n",
+    "FRAMES_PER_LINE = 20\n",
+    "N = len(y0_)  # How many different initial conditions?\n",
+    "\n",
     "fig, ax = plt.subplots()\n",
     "ax.grid(linestyle=':')\n",
     "ax.set_xlim((t0, t1))    # Range of x-axis.\n",
-    "ax.set_ylim((0, y[-1]))  # Range of y-axis.\n",
+    "ax.set_ylim((0, 200))  # Range of y-axis.\n",
     "\n",
-    "line = ax.plot([], [], lw=2)[0]\n",
-    "line_ = ax.plot([], [], lw=2)[0]\n",
+    "# Create one line for each initial condition.\n",
+    "lines = [ax.plot([], [], lw=2)[0] for _ in range(N)]\n",
     "\n",
     "def init():\n",
-    "    line.set_data(t, y)\n",
-    "    line_.set_data([], [])\n",
-    "    return [line, line_]\n",
+    "    for line in lines:\n",
+    "        line.set_data([], [])\n",
+    "    return lines\n",
     "\n",
     "def animate(i):\n",
-    "    # Take only first (i/FRAMES) of total number of points.\n",
-    "    k = len(t) * i // FRAMES\n",
-    "    line_.set_data(t[:k], y_[:k])\n",
-    "    return [line, line_]\n",
+    "    for j, line in enumerate(lines):\n",
+    "        if i >= FRAMES_PER_LINE * (j + 1):\n",
+    "            # Full line.\n",
+    "            line.set_data(t, y_[:, j])\n",
+    "        elif i >= FRAMES_PER_LINE * j:\n",
+    "            # Partial line.\n",
+    "            k = i - FRAMES_PER_LINE * j\n",
+    "            k = k * len(t) // FRAMES_PER_LINE\n",
+    "            line.set_data(t[:k], y_[:k, j])\n",
+    "        else:\n",
+    "            # Too early, no line.\n",
+    "            line.set_data([], [])\n",
+    "    return lines\n",
     "\n",
-    "anim_ = animation.FuncAnimation(fig, animate, init_func=init,\n",
-    "                                frames=FRAMES, interval=50, blit=True)"
+    "anim_ = animation.FuncAnimation(\n",
+    "        fig, animate, init_func=init,\n",
+    "        frames=len(y0_) * FRAMES_PER_LINE, interval=50, blit=True)"
    ]
   },
   {
