--- a/python/sol_07_three_species.ipynb
+++ b/python/sol_07_three_species.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Three species "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -11,6 +18,13 @@
     "from matplotlib import pyplot as plt  # For plotting.\n",
     "import numpy as np                    # For solving ODE.\n",
     "from scipy.integrate import odeint    # For solving ODE."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model "
    ]
   },
   {
@@ -33,6 +47,13 @@
     "y0 = [10, 25, 5]  # Initial population of species 0, 1 and 2.\n",
     "\n",
     "# Model.\n",
+    "# F = lambda y, t: [\n",
+    "#     y[0] * (a - b * y[1]),   # How population 0 changes.\n",
+    "#     y[1] * (-c + d * y[0]),  # How population 1 changes.\n",
+    "# ]\n",
+    "\n",
+    "# TODO: Extend the 2-species model above to 3 species.\n",
+    "# Use the parameters a, b, c, d, e, f, g defined above.\n",
     "F = lambda y, t: [\n",
     "    y[0] * (a - b * y[1]),              # How population 0 changes.\n",
     "    y[1] * (-c + d * y[0] - e * y[2]),  # How population 1 changes.\n",
@@ -68,6 +89,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Animation "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -82,15 +110,15 @@
     "ax.set_xlim((t0, t1))  # Range of x-axis.\n",
     "ax.set_ylim((0, 100))  # Range of y-axis.\n",
     "\n",
-    "line0, = ax.plot([], [], lw=2)\n",
-    "line1, = ax.plot([], [], lw=2)\n",
-    "line2, = ax.plot([], [], lw=2)\n",
+    "line0 = ax.plot([], [], lw=2)[0]\n",
+    "line1 = ax.plot([], [], lw=2)[0]\n",
+    "line2 = ax.plot([], [], lw=2)[0]\n",
     "\n",
     "def init():\n",
     "    line0.set_data([], [])\n",
     "    line1.set_data([], [])\n",
     "    line2.set_data([], [])\n",
-    "    return (line0, line1, line2)\n",
+    "    return [line0, line1, line2]\n",
     "\n",
     "def animate(i):\n",
     "    # Take only first (i/FRAMES) points.\n",
@@ -98,7 +126,7 @@
     "    line0.set_data(t[:k], y[:k, 0])\n",
     "    line1.set_data(t[:k], y[:k, 1])\n",
     "    line2.set_data(t[:k], y[:k, 2])\n",
-    "    return (line0, line1, line2)\n",
+    "    return [line0, line1, line2]\n",
     "\n",
     "anim = animation.FuncAnimation(fig, animate, init_func=init,\n",
     "                               frames=FRAMES, interval=50, blit=True)"
